Bug 973321 - Prevent int overflow in border image width calculation. r=dbaron